# video-decomposer-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.base  LICENSE.md  README.md  RELEASE_NOTES.md  build-local.sh  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: docker-base.yml  docker.yml  lint.yml  release-notes.yml  release.yml  test.yml
src/video_decomposer_mcp/: __init__.py  cli.py  server.py  video_store.py
src/video_decomposer_mcp/tools/: analyze.py  download.py  frames.py  transcribe.py
tests/: conftest.py  test_analyze.py  test_cli.py  test_download.py  test_frames.py  test_logging.py  test_server.py  test_transcribe.py  test_video_store.py
